--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ssr:serve": "ng run space-x:serve-ssr",
+    "start": "ng run space-x:serve-ssr --open",
     "serve:ssr": "node dist/space-x/server/main.js",
     "build:ssr": "ng build --prod && ng run space-x:server:production",
     "prerender": "ng run space-x:prerender"
